--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 
 
 .inner {
-  width: 768px;
+  width: 1200px;
   margin: 0 auto;
 
   background-color: #ffffff;
@@ -175,8 +175,20 @@ a {
   background-color: #bad5e6;
   background-image: url("../img/rock.jpg");
   background-repeat: no-repeat;
-  background-position: top center;
   background-size: cover;
+}
+
+.container__box-image::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 57px;
+  bottom: 0;
+  left: 0;
+  background-image: url("../img/background.png");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: 100%;
 }
 
 .container__image {
@@ -229,6 +241,7 @@ a {
 }
 
 .features-list__item {
+  min-height: 250px;
   position: relative;
 
   -webkit-box-sizing: border-box;
@@ -277,7 +290,7 @@ a {
 
 .features-list__image {
   position: absolute;
-  top: 0;
+  top: -78px;
   left: 0;
 }
 
@@ -290,6 +303,10 @@ a {
   font-weight: 700;
   font-size: 21px;
   color: #000000;
+}
+
+.features-list__title_size-padding-m {
+  padding: 0 10%;
 }
 
 .features-list__number {
@@ -346,8 +363,8 @@ a {
 }
 
 .features-list__item_size_m {
+  min-height: 325px;
   padding-top: 160px;
-  padding-bottom: 80px;
 
   background-color: #ffffff;
 }
@@ -795,6 +812,7 @@ a {
 }
 
 .main-map {
+  overflow: hidden;
   position: relative;
 
   min-height: 593px;
@@ -817,11 +835,13 @@ a {
 
 .main-map__image {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 10;
-
-  min-height: 593px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: none;
+  height: auto;
+    /* width: 100%;
+    height: auto; */
 }
 
 .main-map__google-map {
@@ -979,11 +999,10 @@ a {
 }
 
 .search-hotels__column {
-  width: 22.72%;
+  width: 25%;
 }
 
 .search-hotels__column-type-digs {
-  margin-left: 1.42%;
 }
 
 .search-hotels__column_right {
@@ -1491,4 +1510,46 @@ input:focus + .found-hotels__icon {
 
 .found-hotels-list__rating_three-two::before {
   width: 40px;
+}
+
+@media all and (max-width: 1200px) {
+  body{
+    min-width: 768px;
+  }
+
+  .inner{
+	width: 100%;
+	box-shadow: none;
+  }
+
+  .features-list__column_text,
+  .features-list__item_gray {
+  padding-bottom: 40px;
+  }
+
+  .search-hotels__column-type-digs {
+    margin-left: 10%;
+  }
+
+  .main-map__google-map{
+	width: 100%;
+  }
+
+  .features-list__column_size_m{
+	position: relative;
+	overflow: hidden;
+  }
+
+  .features-list__image{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+  }
+
+  .search-hotels__control-left{
+	padding: 0 10px;
+  }
 }
